force-app/main/default/objects/Dial_List_Entry__c/Dial_List_Entry__c.object-meta.xml
<CustomObject>
    <label>Dial List Entry</label>
    <pluralLabel>Dial List Entries</pluralLabel>
    <nameField>
        <displayFormat>DLE-{00000000}</displayFormat>
        <label>Dial List Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Compliant callable universe for the Amazon Connect Outbound Campaign - one row per dialer-eligible Lead, refreshed by DialListRefresh (upsert on Lead_Ext_Id__c). Static gate = Lead.Dialer_Eligible__c; the 8am-9pm recipient-local window is applied at export via Time_Zone__c.</description>
</CustomObject>