force-app/main/default/objects/Dial_List_Entry__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Dial List Entries</relationshipLabel>
    <relationshipName>Dial_List_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>