force-app/main/default/objects/Dial_List_Entry__c/fields/Lead_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Ext_Id__c</fullName>
    <label>Lead External Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <inlineHelpText>The source Lead Id - upsert key so the refresh is idempotent (one entry per Lead).</inlineHelpText>
</CustomField>