force-app/main/default/objects/Dial_List_Entry__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Text</type>
    <length>20</length>
    <inlineHelpText>Lead Office__c code (e.g. HFS_TPA) captured at staging - for campaign segmentation/reporting.</inlineHelpText>
</CustomField>