force-app/main/default/objects/Dial_List_Entry__c/fields/Ok_To_Call__c.field-meta.xml
<CustomField>
    <fullName>Ok_To_Call__c</fullName>
    <label>Ok To Call</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set true when staged; the export sends only Ok_To_Call rows currently inside their local 8am-9pm window.</inlineHelpText>
</CustomField>