force-app/main/default/objects/Dial_List_Entry__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Text</type>
    <length>20</length>
    <inlineHelpText>Normalized E.164 number to dial (+1XXXXXXXXXX).</inlineHelpText>
</CustomField>