force-app/main/default/objects/Dial_List_Entry__c/fields/Staged_At__c.field-meta.xml
<CustomField>
    <fullName>Staged_At__c</fullName>
    <label>Staged At</label>
    <type>DateTime</type>
    <inlineHelpText>When this entry was last (re)staged by DialListRefresh.</inlineHelpText>
</CustomField>