force-app/main/default/objects/Dial_List_Entry__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Text</type>
    <length>60</length>
    <inlineHelpText>Recipient IANA timezone (from Lead.Local_Timezone__c, else resolved) - drives the 8am-9pm in-window export filter.</inlineHelpText>
</CustomField>